--- a/NotesAnxiety/NotesAnxiety.entitlements
+++ b/NotesAnxiety/NotesAnxiety.entitlements
@@ -10,5 +10,9 @@
 	</array>
 	<key>com.apple.developer.healthkit.background-delivery</key>
 	<true/>
+	<key>com.apple.developer.journal.allow</key>
+	<array>
+		<string>suggestions</string>
+	</array>
 </dict>
 </plist>
